kubernetes/apps/downloads/prowlarr/app/httproute.yaml
---
# yaml-language-server: $schema=https://schemas.clustrs.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prowlarr
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Prowlarr"
    gethomepage.dev/description: "Indexer aggregator/proxy"
    gethomepage.dev/group: "Downloads"
    gethomepage.dev/icon: "prowlarr"
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  hostnames:
    - "prowlarr.${DOMAIN_CLUSTER}"
  rules:
    - backendRefs:
        - name: prowlarr
          port: 9696
